docs/3.0.0/_sources/firmware/bmc-proxy.md.txt
# Board Management Controller (BMC) Proxy Driver

<span id="boardmanagementcontroller-bmc-proxydriver-overview"></span>

## Overview

MCTP - Management Component Transport Protocol

PLDM - Platform Level Data Model

The BMC proxy allows for communication and sensor management between the BMC and AMC through MCTP/PLDM protocols. The BMC proxy is polling indefinitely and listening for incoming messages through a FAL **read** call. If a message is received, an internal flag is set that will start the processing of the message. The proxy calls into the MCTP code to determine whether the message is an MCTP, PLDM Type 0 or PLDM Type 2 form which will determine the exact command. The PLDM code will then form a response to the initial request, which gets sent back to the BMC via a firmware interface **write** by the BMC proxy driver.

On V80, BMC proxy initialise is deferred until SMBus FAL create succeeds after a PDI with SMBus IP is loaded. RAVE does not build this proxy (`HAL_SMBUS_FEATURE` is 0).

<span id="boardmanagementcontroller-bmc-proxydriver-note"></span>

### Note:

The MCTP/PLDM code provided is intended to be used and an example to prove the basic functionality of a BMC stack. AMC only supports Type 0 and Type 2 DMTF messages (limited to sensor reading - i.e. no effecters).

![images/1107376765.png](../images/1107376765.png)

<span id="boardmanagementcontroller-bmc-proxydriver-supportedcommands"></span>

## Supported commands

M - Mandatory

O - Optional

C - Conditional

<span id="boardmanagementcontroller-bmc-proxydriver-mctp"></span>

### MCTP

<table>
<thead>
<tr class="header">
<th>Command Name</th>
<th>Command Code</th>
<th>DMTF Spec<br />
<br />
M/O/C</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td>Set Endpoint ID</td>
<td>0x01</td>
<td>M</td>
</tr>
<tr class="even">
<td>Get Endpoint ID</td>
<td>0x02</td>
<td>M</td>
</tr>
<tr class="odd">
<td>Get Endpoint UUID</td>
<td>0x03</td>
<td>M</td>
</tr>
<tr class="even">
<td>Get MCTP Version Support</td>
<td><p>0x04</p></td>
<td>M</td>
</tr>
<tr class="odd">
<td>Get Message Type support</td>
<td>0x05</td>
<td>M</td>
</tr>
</tbody>
</table>

<span id="boardmanagementcontroller-bmc-proxydriver-pldmtype0"></span>

### PLDM Type 0

<table>
<thead>
<tr class="header">
<th>Command Name</th>
<th>Command Code</th>
<th>DMTF Spec<br />
<br />
M/O/C</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td>SetTID</td>
<td>0x01</td>
<td>M</td>
</tr>
<tr class="even">
<td>GetTID</td>
<td>0x02</td>
<td>M</td>
</tr>
<tr class="odd">
<td>GetPLDMVersion</td>
<td>0x03</td>
<td>M</td>
</tr>
<tr class="even">
<td>GetPLDMTypes</td>
<td><p>0x04</p></td>
<td>M</td>
</tr>
<tr class="odd">
<td>GetPLDMCommands</td>
<td>0x05</td>
<td>M</td>
</tr>
</tbody>
</table>

<span id="boardmanagementcontroller-bmc-proxydriver-pldmtype2"></span>

### PLDM Type 2

<table>
<thead>
<tr class="header">
<th>Command Name</th>
<th>Command Code</th>
<th>DMTF Spec<br />
<br />
M/O/C</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td>SetTID</td>
<td>0x01</td>
<td>M</td>
</tr>
<tr class="even">
<td>GetTID</td>
<td>0x02</td>
<td>M</td>
</tr>
<tr class="odd">
<td><span class="legacy-color-text-blue3">SetNumericSensorEnable</span></td>
<td><span class="legacy-color-text-blue3">0x10</span></td>
<td>M</td>
</tr>
<tr class="even">
<td><span class="legacy-color-text-blue3">GetSensorReading</span></td>
<td><p><span class="legacy-color-text-blue3">0x11</span></p></td>
<td>M</td>
</tr>
<tr class="odd">
<td><span class="legacy-color-text-blue3">GetPDRRepositoryInfo</span></td>
<td><span class="legacy-color-text-blue3">0x50</span></td>
<td>M</td>
</tr>
<tr class="even">
<td><span class="legacy-color-text-blue3">GetPDR</span></td>
<td><span class="legacy-color-text-blue3">0x51</span></td>
<td>M</td>
</tr>
</tbody>
</table>

<span id="boardmanagementcontroller-bmc-proxydriver-supportedpdrs"></span>

## Supported PDRs

| PDR Type Number | PDR Type Name              |
| ----- | ---------- |
| 1               | Terminus Locator PDR       |
| 2               | Numeric Sensor PDR         |
| 6               | Sensor Auxiliary Names PDR |

<span id="boardmanagementcontroller-bmc-proxydriver-internalapis"></span>

## Internal APIs

<span id="boardmanagementcontroller-bmc-proxydriver-enums"></span>

### Enums

BMC accepted events.

**BMC\_PROXY\_DRIVER\_EVENTS**

    /**
     * @enum    BMC_PROXY_DRIVER_EVENTS
     * @brief   Events raised by this proxy driver
     */
    typedef enum BMC_PROXY_DRIVER_EVENTS
    {
        BMC_PROXY_DRIVER_E_MSG_ARRIVAL = 0,
        BMC_PROXY_DRIVER_E_GET_PDR,
        BMC_PROXY_DRIVER_E_GET_PDR_REPOSITORY_INFO,
        BMC_PROXY_DRIVER_E_GET_SENSOR_INFO,
        BMC_PROXY_DRIVER_E_ENABLE_SENSOR,
        BMC_PROXY_DRIVER_E_INVALID_REQUEST_RECVD,
        MAX_BMC_PROXY_DRIVER_EVENTS
    
    } BMC_PROXY_DRIVER_EVENTS;

Response result IDs.

**BMC\_PROXY\_RESULT**

    /**
     * @enum    BMC_PROXY_RESPONSE_RESULT
     * @brief   The response result
     */
    typedef enum BMC_PROXY_RESULT
    {
        BMC_PROXY_RESULT_SUCCESS = 0,
        BMC_PROXY_RESULT_FAILURE,
        MAX_BMC_PROXY_RESULT
    
    } BMC_PROXY_RESULT;

Response IDs.

**BMC\_SENSOR\_RESPONSE**

    /**
     * @enum    BMC_SENSOR_RESPONSE
     * @brief   The response
     */
    typedef enum BMC_SENSOR_RESPONSE
    {
        BMC_RESPONSE_OK = 0,
        BMC_RESPONSE_ERROR,
        MAX_BMC_SENSOR_RESPONSE
    
    } BMC_SENSOR_RESPONSE;

Enable sensor response IDs.

**BMC\_SET\_NUMERIC\_SENSOR\_ENABLE\_RESPONSE**

    /**
     * @enum    BMC_SET_NUMERIC_SENSOR_ENABLE_RESPONSE
     * @brief   The response
     */
    typedef enum BMC_SET_NUMERIC_SENSOR_ENABLE_RESPONSE
    {
        BMC_SENSOR_ENABLE_RESP_OK = 0,
        BMC_SENSOR_ENABLE_RESP_INVALID_SENSOR_ID,
        BMC_SENSOR_ENABLE_RESP_INVALID_SENSOR_OPERATIONAL_STATE,
        BMC_SENSOR_ENABLE_RESP_EVENT_GENERATION_NOT_SUPPORTED,
        BMC_SENSOR_ENABLE_RESP_NONE,
        MAX_BMC_SENSOR_ENABLE_RESP
    
    } BMC_SET_NUMERIC_SENSOR_ENABLE_RESPONSE;

Get sensor response IDs.

**BMC\_GET\_SENSOR\_RESPONSE**

    /**
     * @enum    BMC_GET_SENSOR_RESPONSE
     * @brief   The response
     */
    typedef enum BMC_GET_SENSOR_RESPONSE
    {
        BMC_GET_SENSOR_RESP_OK = 0,
        BMC_GET_SENSOR_RESP_INVALID_SENSOR_ID,
        BMC_GET_SENSOR_RESP_INVALID_SENSOR_OPERATIONAL_STATE,
        BMC_GET_SENSOR_RESP_REARM_UNAVAILABLE_IN_PRESENT_STATE,
        BMC_GET_SENSOR_RESP_NONE,
        MAX_BMC_GET_SENSOR_RESP
    
    } BMC_GET_SENSOR_RESPONSE;

<span id="boardmanagementcontroller-bmc-proxydriver-initializetheproxy"></span>

### Initialize the proxy

`iBMC_AllocateEvlRecord` may be called before `iBMC_Initialise` so the EVL record is taken from the heap before SMBus driver init (which is heap-heavy). The call is idempotent. On V80, full BMC initialise still waits until SMBus FAL create has succeeded after PDI load.

If initialise fails part-way through, `vBMC_CleanupPartialInit` releases PDR buffers, the task, semaphore, mutex, and EVL record (`iEVL_DestroyRecord`) so a later retry can start clean.

The initialize function takes in 15 parameters:

  - The unique ID of the proxy driver

  - Pointer to the firmware interface the proxy uses

  - The port of the firmware interface

  - The priority of the task

  - Pointer to the list of temperature sensor PDRs

  - Pointer to the list of voltage sensor PDRs

  - Pointer to the list of current sensor PDRs

  - Pointer to the list of power sensor PDRs

  - Pointer to the list of names sensor PDRs

  - Total number of PDRs in the respective lists

**iBMC\_AllocateEvlRecord**

    /**
     * @brief   Pre-allocate the BMC EVL record before heap-heavy init (e.g. SMBus)
     *
     * @return  OK      EVL record allocated or already present
     *          ERROR   Allocation failed
     */
    int iBMC_AllocateEvlRecord( void );

**iBMC\_Initialise**

    /**
     * @brief   Main initialisation point for the BMC Proxy Driver
     *
     * @param   ucProxyId   Unique ID for this Proxy driver
     * @param   pxFwIf      Handle to the Firmware Interface to use
     * @param   ulFwIfPort  Port to use on the Firmware Interface
     * @param   ulTaskPrio  Priority of the Proxy driver task (if RR disabled)
     * @param   ulTaskStack Stack size of the Proxy driver task
     * @param   pxPdrTemperatureSensors Pointer to Temperature PDR
     * @param   iTotalPdrTemperature Size of Temperature PDR
     * @param   pxPdrVoltageSensors Pointer to Voltage PDR
     * @param   iTotalPdrVoltage Size of Voltage PDR
     * @param   pxPdrCurrentSensors Pointer to Current PDR
     * @param   iTotalPdrCurrent Size of Current PDR
     * @param   pxPdrPowerSensors Pointer to Power PDR
     * @param   iTotalPdrPower Size of Power PDR
     * @param   pxPdrSensorNames Pointer to Sensor Names PDR
     * @param   iTotalPdrName Size of Sensor Names PDR
     * @param   pucUuid Pointer to UUID
     *
     * @return  OK          Proxy driver initialised correctly
     *          ERROR       Proxy driver not initialised, or was already initialised
     *
     * @note    Proxy drivers can have 0 or more firmware interfaces
     */
    int iBMC_Initialise( uint8_t ucProxyId,
                         FW_IF_CFG *pxFwIf,
                         uint32_t ulFwIfPort,
                         uint32_t ulTaskPrio,
                         uint32_t ulTaskStack,
                         PLDMNumericSensorPdr *pxPdrTemperatureSensors,
                         int iTotalPdrTemperature,
                         PLDMNumericSensorPdr *pxPdrVoltageSensors,
                         int iTotalPdrVoltage,
                         PLDMNumericSensorPdr *pxPdrCurrentSensors,
                         int iTotalPdrCurrent,
                         PLDMNumericSensorPdr *pxPdrPowerSensors,
                         int iTotalPdrPower,
                         PLDMNumericSensorNamePdr *pxPdrSensorNames,
                         int iTotalPdrName,
                         uint8_t *pucUuid );

<span id="boardmanagementcontroller-bmc-proxydriver-bindcallback"></span>

### Bind callback

Applications can bind into the callback to listen to incoming events and handle them accordingly.

Current list of supported events:

  - BMC\_PROXY\_DRIVER\_E\_MSG\_ARRIVAL

  - BMC\_PROXY\_DRIVER\_E\_GET\_PDR

  - BMC\_PROXY\_DRIVER\_E\_GET\_PDR\_REPOSITORY\_INFO

  - BMC\_PROXY\_DRIVER\_E\_GET\_SENSOR\_INFO

  - BMC\_PROXY\_DRIVER\_E\_ENABLE\_SENSOR

  - BMC\_PROXY\_DRIVER\_E\_INVALID\_REQUEST\_RECVD

**iBMC\_BindCallback**

    /**
     * @brief   Bind into this proxy driver
     *
     * @param   pxCallback  Callback to bind into the proxy driver
     *
     * @return  OK          Callback successfully bound
     *          ERROR       Callback not bound
     */
    int iBMC_BindCallback( EVL_CALLBACK *pxCallback );

<span id="boardmanagementcontroller-bmc-proxydriver-setsensorinforesponse"></span>

### Set sensor info response

Function used to respond to the BMC\_PROXY\_DRIVER\_E\_GET\_SENSOR\_INFO event.

**iBMC\_SendResponseForGetSensor**

    /**
     * @brief   Response to a Sensor Info request
     *
     * @param   pxSignal        Current event occurrence (used for tracking)
     * @param   usSensorId      Sensor Id
     * @param   ssSensorInfo    Sensor Value
     * @param   ucSensorState   Sensor Operational State
     * @param   xSensorResponse The response to the sensor query, OK, Invalid ID etc
     *
     * @return  OK          Command was successful
     *          ERROR       Command failed
     */
    int iBMC_SendResponseForGetSensor( EVL_SIGNAL *pxSignal,
                                       uint16_t usSensorId,
                                       int16_t ssSensorInfo,
                                       uint8_t ucSensorState,
                                       BMC_GET_SENSOR_RESPONSE xSensorResponse );

<span id="boardmanagementcontroller-bmc-proxydriver-setresponse"></span>

### Set response

Responds back to a request from the proxy to enable a sensor.

**iBMC\_SetResponse**

    /**
    * @brief Response to an enable sensor request
    *
    * @param pxSignal Current event occurrence (used for tracking)
    * @param xBmcResponse Enable sensor response
    *
    * @return OK Command was successful
    * ERROR Command failed
    */
    int iBMC_SetResponse( EVL_SIGNAL *pxSignal, uint16_t usSensorId, BMC_SENSOR_RESPONSE xBmcResponse );

<span id="boardmanagementcontroller-bmc-proxydriver-getuuid"></span>

### Get UUID

Returns the board UUID

**iBMC\_GetUuid**

    /**
     * @brief   Get the UUID
     *
     * @param   pucUuid   pointer to UUID location
     *
     * @return  OK or ERROR
     */
    int iBMC_GetUuid( uint8_t * pucUuid );

<span id="boardmanagementcontroller-bmc-proxydriver-getsensoridrequest"></span>

### Get sensor ID request

If a BMC\_PROXY\_DRIVER\_E\_GET\_SENSOR\_INFO event is received, the application can call iBMC\_GetSensorIdRequest to get more information about the request like the sensor ID and operational state.

**iBMC\_GetSensorIdRequest**

    /**
     * @brief   Function called after certain events are raised to get the sensor id
     *
     * @param   pxSignal            pointer to signal raised
     * @param   pusSensorId         pointer sensor id
     * @param   pucOperationalState pointer to the new state (if required)
     *
     * @return  OK or ERROR
     */
    int iBMC_GetSensorIdRequest( EVL_SIGNAL *pxSignal, int16_t *pssSensorId, uint8_t *pucOperationalState );

<span id="boardmanagementcontroller-bmc-proxydriver-datawrite"></span>

### Data write

Performs a FAL write with the supplied buffer and size.

**iBMC\_ResponseDataWrite**

    /**
     * @brief   Start a Data Write
     *
     * @param   pucData     Pointer to the data
     * @param   usDatasize  Size of data received
     *
     * @return  OK or ERROR
     */
    int iBMC_ResponseDataWrite( uint8_t *pucData, uint16_t usDataSize );

<span id="boardmanagementcontroller-bmc-proxydriver-printstatistics"></span>

### Print statistics

Prints the statistics associated with the proxy.

**iBMC\_PrintStatistics**

    /**
     * @brief   Print all the stats gathered by the application
     *
     * @return  OK          Stats retrieved from proxy driver successfully
     *          ERROR       Stats not retrieved successfully
     *
     */
    int iBMC_PrintStatistics( void );

<span id="boardmanagementcontroller-bmc-proxydriver-clearstatistics"></span>

### Clear statistics

Clears the statistics associated with the proxy.

**iBMC\_ClearStatistics**

    /**
     * @brief   Clear all the stats in the application
     *
     * @return  OK          Stats cleared successfully
     *          ERROR       Stats not cleared successfully
     *
     */
    int iBMC_ClearStatistics( void );

<span id="boardmanagementcontroller-bmc-proxydriver-getproxystate"></span>

### Get proxy state

Gets the current health state of the proxy.

**iBMC\_GetState**

    /**
    * @brief Gets the current state of the proxy driver
    *
    * @param pxState Pointer to the state
    *
    * @return OK If successful
    * ERROR If not successful
    */
    int iBMC_GetState( MODULE_STATE *pxState );

<span id="boardmanagementcontroller-bmc-proxydriver-smbusbytetrace"></span>

### SMBus byte trace (debug)

The BMC DAL menu includes `enable_byte_trace` and `disable_byte_trace`. These call `vFW_IF_SMBUS_SetByteTrace()` so SMBus block I/O can hex-dump TX and RX payloads at the `LOGGING` PLL level without raising global verbosity.

<span id="boardmanagementcontroller-bmc-proxydriver-bmcproxyhandlingrequests"></span>

## BMC Proxy Handling Requests

The request API’s allows an application to get a copy of the internal proxy request data received via the FAL.

  - iBMC\_GetSensorIdRequest

The requests data is stored within the BMC proxy when the event is generated and the callback has been invoked to notify any registered users.

When the request from the application is made a protected copy of the data is made and returned that will allow the user to perform the relevant action.

A global mutex is held until a MCTP message is processed and response created. Any BMC request calls that change private data are within the flow of that message making them protected.

![images/1107376756.png](../images/1107376756.png)

<span id="boardmanagementcontroller-bmc-proxydriver-bmcproxyhandlingresponses"></span>

## BMC Proxy Handling Responses

The response API’s are used by the application to respond back to the request with data/result code once the relevant action has been performed.

  - iBMC\_SetResponse

  - iBMC\_GetSensorInfoResponse

Within each response a the relevant flag is set, signaling to the proxy that the event has been handled and the requested data is available.

A global mutex is held until a MCTP message is processed and response created. Any BMC response calls that change private data are within the flow of that message making them protected.

![images/1107376753.png](../images/1107376753.png)

<span id="boardmanagementcontroller-bmc-proxydriver-examples"></span>

## Examples

<span id="boardmanagementcontroller-bmc-proxydriver-initializeproxy"></span>

### Initialize Proxy

The initialize function needs a unique id for the proxy, a handle to a FW\_IF (already created and initialized), and a task priority/size passed in, as well as the PDR sensor lists and total values.

**iBMC\_Initialise Example**

    if( OK == iBMC_Initialise( AMC_CFG_UNIQUE_ID_BMC, &xSMBusIf, 0, AMC_TASK_PRIO_DEFAULT, AMC_TASK_DEFAULT_STACK,
                                   pxPdrTemperatureSensors, TOTAL_PDR_TEMPERATURE,
                                   pxPdrVoltageSensors,     TOTAL_PDR_VOLTAGE,
                                   pxPdrCurrentSensors,     TOTAL_PDR_CURRENT,
                                   pxPdrPowerSensors,       TOTAL_PDR_POWER,
                                   pxPdrSensorNames,        TOTAL_PDR_NUMERIC_ASCI_SENSORS ) )

<span id="boardmanagementcontroller-bmc-proxydriver-registerforcallback"></span>

### Register for Callback

Define a function based on the function pointer prototype and bind in using the API.

**iBMC\_Initialise Example**

    /**
     * @brief   BMC Proxy Driver EVL callback
     */
    static int iBmcCallback( EVL_SIGNAL *pxSignal )
    {
        int iStatus = ERROR;
    
        if( ( NULL != pxSignal ) && ( AMC_CFG_UNIQUE_ID_BMC == pxSignal->ucModule ) )
        {
            switch( pxSignal->ucEventType )
            {
            default:
            {
                break;
            }
            }
        }
    
        return iStatus;
    }

<span id="boardmanagementcontroller-bmc-proxydriver-generatingresponses"></span>

### Generating Responses

Example of calling the response (iBMC\_GetSensorInfoResponse) from within the callback to send the result back to the proxy.

**BMC\_PRIVATE\_DATA**

    /**
     * @brief   RMI Handler EVL callback
     */
    static int iBmcProxyCallback( EVL_SIGNAL *pxSignal )
    {
        int iStatus = ERROR;
    
        if( ( NULL != pxSignal ) && ( AMC_CFG_UNIQUE_ID_BMC == pxSignal->ucModule ) )
        {
            if( MAX_BMC_PROXY_DRIVER_EVENTS >= pxSignal->ucEventType )
            {
                switch( pxSignal->ucEventType )
                {
    
                case BMC_PROXY_DRIVER_E_GET_PDR:
                {
                    INC_STAT_COUNTER( OUT_OF_BAND_STATS_BMC_PDR_REQUEST )
                    break;
                }
    
                case BMC_PROXY_DRIVER_E_GET_PDR_REPOSITORY_INFO:
                {
                    INC_STAT_COUNTER( OUT_OF_BAND_STATS_BMC_PDR_INFO_REQUEST )
                    break;
                }
    
                case BMC_PROXY_DRIVER_E_GET_SENSOR_INFO:
                {
                    INC_STAT_COUNTER( OUT_OF_BAND_STATS_BMC_SENSOR_INFO_REQUEST )
    
                    /* TODO: Get info on requested sensor */
    
                    /* TODO: Set the result code based on the collection */
    
                    iBMC_GetSensorInfoResponse( pxSignal,
                                                sSensorId,
                                                sSensorDataResponse,
                                                ucSensorOperationalState,
                                                xSensorResponse );
    
                    break;
                }
                default:
                {
                    INC_STAT_COUNTER( OUT_OF_BAND_STATS_BMC_UNSUPPORTED_REQUEST )
                    break;
                }
                }
    
                iStatus = OK;
            }
        }
    
        return iStatus;
    }

<span id="boardmanagementcontroller-bmc-proxydriver-handlingrequests"></span>

### Handling Requests

Example of requesting the data associated with an event (iBMC\_GetSensorIdRequest) from within the callback and to send the result back to the proxy.

**BMC\_PRIVATE\_DATA**

    /**
     * @brief   RMI Handler EVL callback
     */
    static int iBmcProxyCallback( EVL_SIGNAL *pxSignal )
    {
        int iStatus = ERROR;
    
        if( ( NULL != pxSignal ) && ( AMC_CFG_UNIQUE_ID_BMC == pxSignal->ucModule ) )
        {
            if( MAX_BMC_PROXY_DRIVER_EVENTS >= pxSignal->ucEventType )
            {
                switch( pxSignal->ucEventType )
                {
    
                case BMC_PROXY_DRIVER_E_GET_PDR:
                {
                    INC_STAT_COUNTER( OUT_OF_BAND_STATS_BMC_PDR_REQUEST )
                    break;
                }
    
                case BMC_PROXY_DRIVER_E_GET_PDR_REPOSITORY_INFO:
                {
                    INC_STAT_COUNTER( OUT_OF_BAND_STATS_BMC_PDR_INFO_REQUEST )
                    break;
                }
    
                case BMC_PROXY_DRIVER_E_GET_SENSOR_INFO:
                {
                    INC_STAT_COUNTER( OUT_OF_BAND_STATS_BMC_SENSOR_INFO_REQUEST )
    
                    /* call into BMC Proxy to get required sensor id */
                    iBMC_GetSensorIdRequest( pxSignal, &sSensorId, &ucSensorOperationalState )
    
                    break;
                }
                default:
                {
                    INC_STAT_COUNTER( OUT_OF_BAND_STATS_BMC_UNSUPPORTED_REQUEST )
                    break;
                }
                }
    
                iStatus = OK;
            }
        }
    
        return iStatus;
    }

<span id="boardmanagementcontroller-bmc-proxydriver-commonpdrheader"></span>

## Common PDR header

Structure to store the MCTP/PLDM common header, used in the response buffer.

| Type   | Name               | Description                                                                                                                                 |
| -- | ------ | ----------------------------------------------- |
| uint32 | recordHandle       | An opaque number that is used for accessing individual PDRs within a PDR Repository.                                                        |
| uint8  | PDRHeaderVersion   | This field is provided in case a future version of this specification requires a modification to the format of the PDR Header.              |
| uint8  | PDRType            | The type of the PDR.                                                                                                                        |
| uint16 | recordChangeNumber | Mechanism for preventing the use of invalid PDR data if a record's data gets updated while the record was in the process of being read out. |
| uint16 | dataLength         | The total number of PDR data bytes following this field.                                                                                    |

<span id="boardmanagementcontroller-bmc-proxydriver-numericsensorpdr"></span>

## Numeric sensor PDR

Structure that represents a single numeric sensor PDR.

<table style="width:100%;">
<colgroup>
<col style="width: 3%" />
<col style="width: 16%" />
<col style="width: 79%" />
</colgroup>
<thead>
<tr class="header">
<th>Type</th>
<th>Name</th>
<th>Description</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td>uint16</td>
<td>PLDMTerminusHandle</td>
<td>A handle that identifies PDRs that belong to a particular PLDM terminus.</td>
</tr>
<tr class="even">
<td>uint16</td>
<td>sensorID</td>
<td>ID of the sensor relative to the given PLDM Terminus ID.</td>
</tr>
<tr class="odd">
<td>uint16</td>
<td>entityType</td>
<td>The Type value for the entity that is associated with this sensor.</td>
</tr>
<tr class="even">
<td>uint16</td>
<td>entityInstanceNumber</td>
<td>The Instance Number for the entity that is associated with this sensor. See 9.1 for more information.</td>
</tr>
<tr class="odd">
<td>uint16</td>
<td>containerID</td>
<td>The containerID for the containing entity that instantiates the entity that is measured by this sensor.</td>
</tr>
<tr class="even">
<td>uint8_t</td>
<td>sensorInit</td>
<td>Indicates whether the sensor requires initialization by the initializationAgent.</td>
</tr>
<tr class="odd">
<td>uint8_t</td>
<td>sensorAuxiliaryNamesPDR</td>
<td><p>true = sensor has a Sensor Auxiliary Names PDR</p>
<p>false = sensor does not have an associated Sensor Auxiliary Names PDR</p></td>
</tr>
<tr class="even">
<td>uint8_t</td>
<td>baseUnit</td>
<td>The base unit of the reading returned by this sensor.</td>
</tr>
<tr class="odd">
<td>int8_t</td>
<td>unitModifier</td>
<td>A power-of-10 multiplier for the baseUnit.</td>
</tr>
<tr class="even">
<td>uint8_t</td>
<td>rateUnit</td>
<td>value: { None, Per MicroSecond, Per MilliSecond, Per Second, Per Minute, Per Hour, Per Day, Per Week, Per Month, Per Year }</td>
</tr>
<tr class="odd">
<td>uint8_t</td>
<td>baseOEMUnitHandle</td>
<td>This value is used to locate the corresponding PLDM OEM Unit PDR that defines the OEMUnit when the OEMUnit value is used for the baseUnit.</td>
</tr>
<tr class="even">
<td>uint8_t</td>
<td>auxUnit</td>
<td>The base unit of the reading returned by this sensor.</td>
</tr>
<tr class="odd">
<td>int8_t</td>
<td>auxUnitModifier</td>
<td>A power-of-10 multiplier for the auxUnit.</td>
</tr>
<tr class="even">
<td>uint8_t</td>
<td>auxrateUnit</td>
<td>value: { None, Per MicroSecond, Per MilliSecond, Per Second, Per Minute, Per Hour, Per Day, Per Week, Per Month, Per Year }</td>
</tr>
<tr class="odd">
<td>uint8_t</td>
<td>rel</td>
<td>The relationship between the base unit and the auxiliary unit.</td>
</tr>
<tr class="even">
<td>uint8_t</td>
<td>auxOEMUnitHandle</td>
<td>This value is used to locate the PLDM OEM Unit PDR that defines the OEMUnit if the OEMUnit value is used for the auxUnit.</td>
</tr>
<tr class="odd">
<td>uint8_t</td>
<td>isLinear</td>
<td>Indicates whether a sensor is linear or dynamic in its range. For example, this value can be used by a MAP to populate the IsLinear attribute of CIM_NumericSensor.</td>
</tr>
<tr class="even">
<td>uint8_t</td>
<td>sensorDataSize</td>
<td>The bit width and format of reading and threshold values that the sensor returns value: { uint8, sint8, uint16, sint16, uint32, sint32 }</td>
</tr>
<tr class="odd">
<td>float</td>
<td>resolution</td>
<td>The resolution of the sensor in Units</td>
</tr>
<tr class="even">
<td>float</td>
<td>offset</td>
<td>A constant value that is added in as part of the conversion process of converting a raw sensor reading to Units</td>
</tr>
<tr class="odd">
<td>uint16_t</td>
<td>accuracy</td>
<td>Given as a -/- percentage in 1/100ths of a % from 0.00 to 100.00. For example, the integer value 510 corresponds to ± 5.10%</td>
</tr>
<tr class="even">
<td>uint8_t</td>
<td>plusTolerance</td>
<td>Tolerance is given in -/- counts of the reading value.</td>
</tr>
<tr class="odd">
<td>uint8_t</td>
<td>minusTolerance</td>
<td>Tolerance is given in -/- counts of the reading value.</td>
</tr>
<tr class="even">
<td>int16_t</td>
<td>hysteresis</td>
<td>The amount of hysteresis associated with the sensor thresholds, given in raw sensor counts.</td>
</tr>
<tr class="odd">
<td>uint8_t</td>
<td>supportedThresholds</td>
<td>For PLDM: bit field where bit position represents whether a given threshold is supported</td>
</tr>
<tr class="even">
<td>uint8_t</td>
<td>thresholdAndHysteresisVolatility</td>
<td>Identifies under which conditions any threshold or hysteresis settings that were set through the SetSensorThresholds or SetSensorHysteresis command may be lost.</td>
</tr>
<tr class="odd">
<td>float</td>
<td>stateTransitionInterval</td>
<td>How long the sensor device takes to do an enabledState change (worst case)</td>
</tr>
<tr class="even">
<td>float</td>
<td>updateInterval</td>
<td>Polling or update interval in seconds expressed using a floating point number (generally corresponds to the CIM PollingInterval property)</td>
</tr>
<tr class="odd">
<td>int16_t</td>
<td>maxReadable</td>
<td>The maximum value that the sensor may return. The size of this field is given by the sensorDataSize field in this PDR.</td>
</tr>
<tr class="even">
<td>int16_t</td>
<td>minReadable</td>
<td>The minimum value that the sensor may return. The size of this field is given by the sensorDataSize field in this PDR.</td>
</tr>
<tr class="odd">
<td>uint8_t</td>
<td>rangeFieldFormat</td>
<td>Indicates the format used for the following nominalValue, normalMax, normalMin, criticalHigh, criticalLow, fatalHigh, and fatalLow fields.</td>
</tr>
<tr class="even">
<td>uint8_t</td>
<td>rangeFieldSupport</td>
<td>Indicates which of the fields that identify the operating ranges of the parameter monitored by the sensor are supported. (This bitfield indicates whether the following nominalValue, normalMax, and so on, fields contain valid range values.)</td>
</tr>
<tr class="odd">
<td>int16_t</td>
<td>nominalValue</td>
<td>This value presents the nominal value for the parameter that is monitored by the sensor. The size of this field is given by the rangeFieldFormat field in this PDR. This value is given directly in the specified units without the use of any conversion formula.</td>
</tr>
<tr class="even">
<td>int16_t</td>
<td>normalMax</td>
<td>The upper limit of the normal operating range for the parameter that is monitored by the numeric sensor.</td>
</tr>
<tr class="odd">
<td>int16_t</td>
<td>normalMin</td>
<td>The lower limit of the normal operating range for the parameter that is monitored by the numeric sensor.</td>
</tr>
<tr class="even">
<td>int16_t</td>
<td>warningHigh</td>
<td>A warning condition that occurs when the monitored value is greater than the value reported by warningHigh.</td>
</tr>
<tr class="odd">
<td>int16_t</td>
<td>warningLow</td>
<td>A warning condition that occurs when the monitored value is less than or equal to the value reported by warningLow.</td>
</tr>
<tr class="even">
<td>int16_t</td>
<td>criticalHigh</td>
<td>A critical condition that occurs when the monitored value is greater than or equal to the value reported by criticalHigh.</td>
</tr>
<tr class="odd">
<td>int16_t</td>
<td>criticalLow</td>
<td>A critical condition that occurs when the monitored value is less than the value reported by criticalLow.</td>
</tr>
<tr class="even">
<td>int16_t</td>
<td>fatalHigh</td>
<td>A fatal condition that occurs when the monitored value is greater than the value reported by fatalHigh.</td>
</tr>
<tr class="odd">
<td>int16_t</td>
<td>fatalLow</td>
<td>A fatal condition that occurs when the monitored value is less than the value reported by fatalLow.</td>
</tr>
</tbody>
</table>

<span id="boardmanagementcontroller-bmc-proxydriver-sensornamepdr"></span>

## Sensor name PDR

Structure that stores the sensor names PDR.

| Type   | Name               | Description                                                                                                                                              |
| -- | ------ | ---------------------------------------------------- |
| uint16 | PLDMTerminusHandle | ID of the sensor relative to the given PLDM terminus                                                                                                     |
| uint16 | sensorID           | ID of the sensor relative to the given PLDM terminus                                                                                                     |
| uint8  | sensorCount        | For each sensor x in sensorCount, there can be 1..nameStringCount\[x\] strings, where each set of strings corresponds to a sensor in a composite sensor. |
| uint8  | nameStringCount    | Number of following pairs \[0..N\] of nameLanguageTag - sensorName fields for sensor\[1\]                                                                |
| uint8  | nameLanguageTag    | A null-terminated ISO646 ASCII string that holds a language tag.                                                                                         |
| uint8  | sensorName         | A null-terminated unicode string for the auxiliary name of the sensor                                                                                    |

